# server

./: .dockerignore  .gitignore  2Cargo.toml  Cargo.toml  Cross.toml  Dockerfile  README.md  example_config.toml  rustfmt.toml
.cargo/: config.toml
components/auth/: Cargo.toml
components/auth/src/: bot.rs  lib.rs
components/common/: Cargo.toml
components/common/src/: emoji.rs  id_lock.rs  lib.rs  logging.rs
components/common_web/: Cargo.toml
components/common_web/src/: build_info.rs  error.rs  lib.rs
components/config/: Cargo.toml
components/config/src/: general.rs  lib.rs  util.rs
components/db/: Cargo.toml
components/db/src/: lib.rs  migrate.rs
components/email/: Cargo.toml
components/email/src/: fmt.rs  lib.rs  macros.rs  scenarios.rs  tpl_manager.rs
components/rpc/: Cargo.toml
components/rpc/examples/: asm.rs
components/rpc/src/: auth.rs  client.rs  error.rs  event.rs  lib.rs  msg.rs  procedure.rs  request.rs  stream.rs  tls.rs
components/schema/: Cargo.toml
components/schema/benches/: schema.rs
components/schema/src/: asset.rs  codes.rs  config.rs  flags.rs  lib.rs  names.rs  roles.rs  search.rs  sf.rs  tables.rs  validation.rs  views.rs
crates/blurhash/: Cargo.toml
crates/blurhash/examples/: encode.rs
crates/blurhash/src/: base85.rs  common.rs  decode.rs  encode.rs  lib.rs
crates/db/: Cargo.toml
crates/db/src/: client.rs  conn.rs  lib.rs  migrate.rs  sf.rs  startup.rs  transaction.rs
crates/db/src/old_schema/: attachment.rs  dm.rs  file.rs  invite.rs  party.rs  role.rs  room.rs  thread.rs  user.rs
crates/db/src/old_schema2/: dm.rs  mod.rs
crates/db/src/pool/: config.rs  error.rs  key.rs  mod.rs
crates/db/src/schema/: codes.rs  emote.rs  invite.rs  mod.rs  msg.rs  party.rs  role.rs  room.rs  tables.rs  user.rs  views.rs
crates/embed_parser/: Cargo.toml  build.rs
crates/embed_parser/benches/: parser.rs
crates/embed_parser/examples/: ep_asm.rs
crates/embed_parser/src/: aggregate.rs  embed.rs  html.rs  iter.rs  lib.rs  msg.rs  oembed.rs  quirks.rs  req.rs  utils.rs
crates/embed_parser/tests/: derpi.rs  html.rs  link.rs  msg.rs  yt.rs
crates/emoji/: Cargo.toml  build.rs
crates/emoji/benches/: re.rs
crates/emoji/examples/: find.rs
crates/emoji/src/: lib.rs
crates/ffmpeg_processing/: Cargo.toml
crates/ffmpeg_processing/src/: lib.rs  probe.rs
crates/filesystem/: Cargo.toml
crates/filesystem/src/: crypt.rs  lib.rs  path.rs  store.rs
crates/ftl/: Cargo.toml
crates/ftl/src/: body.rs  compression.rs  fs.rs  lib.rs  real_ip.rs  reply.rs  route.rs  ws.rs
crates/ftl/src/reply/: json.rs  mod.rs  msgpack.rs
crates/mailer/: Cargo.toml
crates/main/: Cargo.toml
crates/main/src/: allocator.rs  cli.rs  main.rs
crates/md_utils/: Cargo.toml  build.rs
crates/md_utils/benches/: parser.rs
crates/md_utils/examples/: parse.rs
crates/md_utils/src/: lib.rs
crates/mfa_totp/: Cargo.toml
crates/mfa_totp/src/: lib.rs  totp.rs
crates/mime_db/: Cargo.toml  build.rs  extra.json
crates/mime_db/src/: lib.rs
crates/models/: Cargo.toml  codes.ts  models.d.ts
crates/models/src/: embed.rs  emote.rs  file.rs  gateway.rs  invite.rs  lib.rs  message.rs  party.rs  permission.rs  prefs.rs  presence.rs  role.rs  room.rs  session.rs  sf.rs  user.rs
crates/process_utils/: Cargo.toml
crates/process_utils/examples/: get.rs
crates/process_utils/src/: lib.rs
crates/processing/: Cargo.toml
crates/processing/src/: avatar.rs  encode.rs  heuristic.rs  lib.rs  process.rs  read_image.rs  util.rs
crates/processing/src/decode/: png.rs
crates/processing/src/encode/: avif.rs  blurhash.rs  jpeg.rs  mod.rs  png.rs
crates/processing/src/process/: imageops.rs  mod.rs
crates/schema/: Cargo.toml
crates/schema/benches/: schema.rs
crates/schema/src/: auth.rs  codes.rs  flags.rs  lib.rs  sf.rs  tables.rs  views.rs
crates/schema/src/auth/: bot.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  db.rs  lib.rs  net.rs  permission_cache.rs  service.rs  session_cache.rs  state.rs
crates/server/src/config/: mod.rs  util.rs
crates/server/src/config/sections/: account.rs  general.rs  keys.rs  message.rs  party.rs  paths.rs  services.rs  tasks.rs  upload.rs
crates/server/src/ctrl/: auth.rs  error.rs  metrics.rs  mod.rs  perm.rs
crates/server/src/ctrl/admin/: auth.rs
crates/server/src/ctrl/cdn/: mod.rs
crates/server/src/ctrl/file/: head.rs  options.rs  patch.rs  post.rs
crates/server/src/ctrl/gateway/: presence.rs  ready.rs  refresh.rs
crates/server/src/endpoints/: mod.rs
crates/server/src/filesystem/: crypt.rs  design.md  disk.rs  mod.rs  path.rs  store.rs
crates/server/src/gateway/: conn.rs  models.rs  msg.rs
crates/server/src/metric/: mod.rs
crates/server/src/net/: addr_stream.rs  filtered_addr_incoming.rs  ip_filter.rs  mod.rs  tls.rs
crates/server/src/queues/: embed.rs  mod.rs  queue.rs
crates/server/src/routes/: mod.rs
crates/server/src/server_old/: mod.rs
crates/server/src/services/: hcaptcha.rs  mod.rs  oembed.rs
crates/server/src/tasks/: cache_cleanup.rs  cn_cleanup.rs  event_cleanup.rs  file_cache_cleanup.rs  item_cache_cleanup.rs  record_metrics.rs  refresh_ip_bans.rs  rl_cleanup.rs  session_cleanup.rs  totp_cleanup.rs
crates/server/src/util/: base62.rs  base64.rs  encrypt.rs  hex.rs  mod.rs  time.rs
crates/server/src/web/: auth.rs  encoding.rs  file_cache.rs  ip_bans.rs  mod.rs  rate_limit.rs  service.rs
crates/task_runner/: Cargo.toml
crates/task_runner/src/: lib.rs
crates/timestamp/: Cargo.toml
crates/timestamp/benches/: timestamp.rs
crates/timestamp/examples/: ts_asm.rs
crates/timestamp/src/: format.rs  lib.rs  macros.rs  parse.rs  ts_str.rs
crates/util/: Cargo.toml
crates/util/benches/: utils.rs
crates/util/examples/: asm.rs
crates/util/src/: base.rs  base62.rs  base64.rs  cancel.rs  cmap.rs  hex.rs  laggy.rs  lib.rs  likely.rs  rng.rs  serde.rs  string.rs  time.rs  zlib.rs
edge/camo-worker/: .gitignore  Cargo.toml  README.md  package.json  rustfmt.toml  wrangler.toml
edge/camo-worker/src/: lib.rs
edge/camo-worker/src/cf/: mod.rs
(+817 files in other folders)
