[patch.crates-io]
headers = { git = "https://github.com/Lantern-chat/headers" }
smol_str = { git = "https://github.com/Lantern-chat/smol_str", branch = "0.2" }
thin-vec = { git = "https://github.com/Lantern-chat/thin-vec" }
failsafe = { git = "https://github.com/Lantern-chat/failsafe-rs" }
iso8601-timestamp = { git = "https://github.com/Lantern-chat/iso8601-timestamp" }
rkyv = { git = "https://github.com/Lantern-chat/rkyv", branch = "0.7" }

# Contains fixes for nightly
# rand = { git = "https://github.com/rust-random/rand" }
# rand_core = { git = "https://github.com/rust-random/rand" }
# rand_chacha = { git = "https://github.com/rust-random/rand" }

# contains unpublished dependency bumps
# postgres-protocol = { git = "https://github.com/sfackler/rust-postgres" }
# postgres-types = { git = "https://github.com/sfackler/rust-postgres" }
# tokio-postgres = { git = "https://github.com/sfackler/rust-postgres" }
# postgres-derive = { git = "https://github.com/sfackler/rust-postgres" }

# postgres-inet = { git = "https://github.com/Lantern-chat/postgres-inet" }

[patch."https://github.com/Lantern-chat/client-sdk-rs"]
client-sdk-common = { path = "../client-sdk-rs/common" }
client-sdk = { path = "../client-sdk-rs" }

[workspace]
resolver = "2"
members = ["crates/*", "components/*", "edge/*", "bin/*", "utilities/*"]
exclude = ["edge/embed-worker", "edge/camo"]

[workspace.dependencies]
db = { path = "crates/db" }
emoji = { path = "crates/emoji" }
filesystem = { path = "crates/filesystem" }
framed = { path = "crates/framed" }
md_utils = { path = "crates/md_utils" }
mfa_totp = { path = "crates/mfa_totp" }
task_runner = { path = "crates/task_runner" }
util = { path = "crates/util" }
z85 = { path = "crates/z85" }
process_utils = { path = "crates/process_utils" }
tracking_allocator = { path = "crates/tracking_allocator" }

common = { path = "components/common" }
config = { path = "components/config" }
auth = { path = "components/auth" }
rpc = { path = "components/rpc" }
schema = { path = "components/schema" }

snowflake = { git = "https://github.com/Lantern-chat/snowflake", features = ["timestamp"] }
sdk = { git = "https://github.com/Lantern-chat/client-sdk-rs", default-features = false, package = "client-sdk" }
smol_str = "0.2"

hashbrown = { version = "0.14", features = ["inline-more", "ahash"] }
rkyv = { version = "0.7", features = ["strict", "validation", "arbitrary_enum_discriminant"] }
bytecheck = { version = "0.6" }                                                                # 0.6 is used with rkyv 0.7
serde = { version = "1", features = ["derive"] }
bitflags = "1.2.1"
ahash = "0.8"
scc = "2"

headers = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["gzip", "deflate", "rustls-tls", "json"] }

ftl = { git = "https://github.com/Lantern-chat/ftl", features = ["json", "cbor"] }
mime_db = { git = "https://github.com/Lantern-chat/mime_db" }
thorn = { git = "https://github.com/Lantern-chat/thorn" }
async-chashmap = { git = "https://github.com/novacrazy/async-chashmap" }

argh = "0.1"
dotenv = "0.15.0"
anyhow = "1"
built = { version = "0.7", features = ["chrono"] }

futures = "0.3"
tokio = { version = "1", features = ["parking_lot"] }
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
tracing-futures = { version = "0.2.4", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot", "registry"] }
tracing-appender = { version = "0.2", features = ["parking_lot"] }

[profile.dev]
opt-level = 1
lto = 'thin'
incremental = false

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1

[profile.dev.build-override]
codegen-units = 1
opt-level = 3

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3
