[patch.crates-io]
schemars = { git = "https://github.com/Lantern-chat/schemars" }
postgres-types = { git = "https://github.com/Lantern-chat/rust-postgres" }
headers = { git = "https://github.com/Lantern-chat/headers" }
argh = { git = "https://github.com/google/argh" }

rkyv = { git = "https://github.com/Lantern-chat/rkyv" }
bytecheck = { git = "https://github.com/rkyv/bytecheck" }
ptr_meta = { git = "https://github.com/rkyv/ptr_meta" }
rancor = { git = "https://github.com/rkyv/rancor" }
rend = { git = "https://github.com/rkyv/rend" }

[patch."https://github.com/Lantern-chat/client-sdk-rs"]
client-sdk = { path = "../client-sdk-rs" }

[workspace]
resolver = "2"
members = ["crates/*", "components/*", "bin/*", "utilities/*", "make"]

[workspace.dependencies]
emoji = { path = "crates/emoji" }
filesystem = { path = "crates/filesystem" }
framed = { path = "crates/framed" }
md_utils = { path = "crates/md_utils" }
mfa_totp = { path = "crates/mfa_totp" }
task_runner = { path = "crates/task_runner" }
util = { path = "crates/util" }
z85 = { path = "crates/z85" }
process_utils = { path = "crates/process_utils" }
tracking_allocator = { path = "crates/tracking_allocator" }

db = { path = "components/db" }
common = { path = "components/common" }
config = { path = "components/config" }
auth = { path = "components/auth" }
rpc = { path = "components/rpc" }
schema = { path = "components/schema" }

timestamp = { package = "iso8601-timestamp", version = "0.3.0-beta.1", features = ["pg"] }
snowflake = { git = "https://github.com/Lantern-chat/snowflake", features = ["timestamp"] }
sdk = { git = "https://github.com/Lantern-chat/client-sdk-rs", default-features = false, package = "client-sdk" }
smol_str = "0.3"
thin-vec = "0.2"

postgres-types = { version = "0.2", features = ["with-rend-0_5", "with-rkyv-0_8", "with-smol_str-03", "with-thin-vec-0_2"] }

hashbrown = { version = "0.14", features = ["inline-more", "ahash"] }
rkyv = { version = "0.8.0-rc.1", features = ["bytecheck"] }
rkyv_rpc = { git = "https://github.com/Lantern-chat/rkyv_rpc" }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
bitflags = "2"
ahash = "0.8"
scc = "2"

http = "1"
headers = "0.4"
quinn = "0.11"

ftl = { git = "https://github.com/Lantern-chat/ftl", features = ["json", "cbor"] }
mime_db = { git = "https://github.com/Lantern-chat/mime_db" }
thorn = { git = "https://github.com/Lantern-chat/thorn" }
async-chashmap = { git = "https://github.com/novacrazy/async-chashmap" }

argh = { version = "0.1", default-features = false, features = ["help"] }
dotenv = "0.15.0"
anyhow = "1"
built = { version = "0.7", features = ["chrono"] }

parking_lot = "0.12"
futures = "0.3"
tokio = { version = "1", features = ["parking_lot"] }
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
tracing-futures = { version = "0.2.4", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot", "registry"] }
tracing-appender = { version = "0.2", features = ["parking_lot"] }

reqwest = { version = "0.12", default-features = false, features = ["gzip", "deflate", "rustls-tls", "http2", "json"] }

[profile.dev]
# debug = 1
opt-level = 1
lto = 'thin'
incremental = false

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1

[profile.dev.build-override]
codegen-units = 1
opt-level = 3

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3
