[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdk = { workspace = true, features = ["rkyv"] }
rkyv = { workspace = true }

aes = "0.8"
base64 = "0.21.0"
sha1 = "0.10"
hmac = "0.12"
thiserror = "1"
static_assertions = "1"
rand_core = "0.6"
byteorder = "1.4"
