[package]
name = "common"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true, features = ["full"] }

task_runner.workspace = true
db.workspace = true
util.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
dotenv.workspace = true
anyhow.workspace = true
argh.workspace = true
