[package]
name = "config"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
thiserror = "2"
paste = "1"
hex = "0.4.2"
bytesize = "1.3.0"
humantime = "2.1.0"
num_cpus = "1.13"
tokio = { version = "1", default-features = false, features = ["sync"] }

tracing.workspace = true
serde.workspace = true
process_utils.workspace = true
serde-aux = "4"
serde_json = "1"
toml = { version = "0.8" }
arc-swap = "1"
futures = "0.3"
uuid = "1.1.2"
