[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
pg_pool = { package = "db", git = "https://github.com/Lantern-chat/pg_pool" }

tokio = { version = "1.4", features = ["sync", "rt", "fs", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8", "with-serde_json-1", "with-time-0_3"] }

thiserror = "1"
tracing = "0.1.25"
