[package]
name = "email"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
futures.workspace = true
scc.workspace = true
timestamp = { workspace = true, features = ["ramhorns"] }
smol_str.workspace = true

lettre = { version = "0.11", default-features = false, features = ["tokio1", "tracing", "builder", "hostname", "smtp-transport", "pool", "tokio1-rustls-tls"] }
ramhorns = "1"
foldhash = "0.1.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
