[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { workspace = true, features = ["api", "rkyv", "driver", "cbor"] }
ftl = { workspace = true }
quinn.workspace = true
parking_lot.workspace = true
smol_str.workspace = true
serde.workspace = true
rkyv = { workspace = true, features = ["smallvec"] }
bytecheck.workspace = true
auth.workspace = true
thiserror = "1"
paste = "1"
framed.workspace = true
tokio = { workspace = true, features = ["macros"] }
futures-util = "0.3"
tracing.workspace = true
smallvec = "1"
indexmap = "2"
scc = "2"
