[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { workspace = true, features = ["api", "rkyv", "driver", "cbor"] }
ftl = { workspace = true, optional = true }
quinn.workspace = true
parking_lot.workspace = true
smol_str.workspace = true
serde.workspace = true
rkyv = { workspace = true, features = ["smallvec-1"] }
rkyv_rpc.workspace = true
auth.workspace = true
thiserror = "2"
paste = "1"
framed.workspace = true
tokio = { workspace = true, features = ["macros", "fs"] }
futures-util = "0.3"
tracing.workspace = true
smallvec = "1"
indexmap = "2"
scc = "2"
rustls = { version = "0.23" }
rustls-pemfile = "2.2"
