[package]
name = "schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db.workspace = true
util.workspace = true
auth.workspace = true
thorn.workspace = true
serde.workspace = true
snowflake.workspace = true

sdk = { workspace = true, features = ["pg", "api", "framework_utils"] }

smol_str.workspace = true
postgres-types = { workspace = true, features = ["array-impls", "with-uuid-1"] }
# enum_primitive = "0.1.1"
# enum-primitive-derive = "0.2.2"
# num-traits = "0.2"
bitflags = { workspace = true }
aes = "0.8"
time = "0.3"
static_assertions = "1"
rand_core = "0.6"
base64 = "0.22.0"
thiserror = "1"
sha1 = "0.10"
hmac = "0.12"
byteorder = "1.4"
form_urlencoded = "1"
# regex-syntax = "0.7.1"
rustrict = "0.7.7"
vec-collections = "0.4.3"
indexmap = "2.0.0"
fxhash = "0.2.1"
uuid = "1.6.1"
postgres_range = "0.11"

[dev-dependencies]
serde_json = "1.0.64"
hex = "0.4.3"
criterion = "0.5"

[[bench]]
name = "schema"
harness = false
