[package]
name = "blurhash"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"

[dev-dependencies]
image = "0.24"
z85 = { path = "../z85" }