[package]
name = "db"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models", features = ["tokio-pg"] }

tokio = { version = "1.4", features = ["sync", "rt", "fs"] }
tokio-postgres = { version = "0.7.0", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1", "with-time-0_2"] }
chrono = "0.4.19"
serde = { version = "1", features = ["derive"] }
uuid = "0.8"
bytes = "1.0.1"
futures = "0.3.14"
failsafe = "1.0.0"
arc-swap = "1.2.0"
thiserror = "1.0.24"
tracing = "0.1.25"
time = { version = "0.2", features = ["serde"] }
hashbrown = { version = "0.11", features = ["inline-more"] }
# parking_lot = "0.11.1"
serde_shims = { version = "0.2", features = ["std", "mime", "bitflags"] }
bitflags = "1.2"
lazy_static = "1.4.0"
regex = "1.4.6"
# sea-query = { version = "0.10", features = ["with-json", "with-chrono", "with-uuid"] }
thorn = { path = "F:/code/projects/active/thorn" }

[dev-dependencies]
serde_json = "1.0.64"
