[package]
name = "db"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thorn = { git = "https://github.com/Lantern-chat/thorn" }

tokio = { version = "1.4", features = ["sync", "rt", "fs", "macros"] }
tokio-postgres = { version = "0.7.0", features = ["with-uuid-0_8", "with-serde_json-1", "with-time-0_3"] }
async-trait = "0.1.50"
bytes = "1.0.1"
futures = "0.3.14"
failsafe = "1.0.0"
arc-swap = "1.2.0"
thiserror = "1.0.24"
parking_lot = "0.12"
tracing = "0.1.25"
hashbrown = { version = "0.12", features = ["inline-more"] }
# parking_lot = "0.11.1"
lazy_static = "1.4.0"
regex = "1.4.6"
num_cpus = "1.13.0"

# deadpool = { version = "0.8.0", default_features = false, features = ["managed", "config", "rt_tokio_1"] }
# sea-query = { version = "0.10", features = ["with-json", "with-chrono", "with-uuid"] }

[dev-dependencies]
serde_json = "1.0.64"
