[package]
name = "embed_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models" }

timestamp = { package = "iso8061-timestamp", version = "0.1" }

smol_str = "0.1"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1.7"
aho-corasick = "0.7.18"
regex-automata = "0.1.10"
lazy_static = "1.4.0"
smallvec = "1.7.0"
# bytecount = "0.6.2"
memchr = "2.4.1"
bitflags = "1.3.2"
# urlencoding = "2.1.0"
thiserror = "1.0.30"

[dev-dependencies]
criterion = "0.3"
serde_json = "1"

[[bench]]
name = "parser"
harness = false