[package]
name = "embed_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdk = { git = "https://github.com/Lantern-chat/client-sdk-rs", package = "client-sdk", default_features = false }

timestamp = { package = "iso8601-timestamp", version = "0.1" }

smol_str = "0.1"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1.7"
regex-automata = { version = "0.1.10", default_features = false }
lazy_static = "1.4.0"
smallvec = "1.7.0"
memchr = "2.4.1"
bitflags = "1.3.2"

[build-dependencies]
regex-automata = { version = "0.1.10", features = ["std"] }

[dev-dependencies]
criterion = "0.4"
serde_json = "1"

[[bench]]
name = "parser"
harness = false