[package]
name = "embed_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
msg = []
default = ["msg"]

[dependencies]
sdk = { git = "https://github.com/Lantern-chat/client-sdk-rs", package = "client-sdk", default_features = false }
regex_util = { path = "../regex_util" }

once_cell = "1.13"
smol_str = "0.1"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1.7"
regex-automata = { version = "0.1.10", default_features = false }
smallvec = "1.7.0"
memchr = "2.5.0"
bitflags = "1.3.2"
csscolorparser = { version = "0.6.2", default_features = false, features = ["named-colors"] }
html-escape = { version = "0.2.13", default_features = false }
url = "2"

[build-dependencies]
regex_util = { path = "../regex_util", features = ["build"] }

[dev-dependencies]
criterion = "0.4"
serde_json = "1"

[[bench]]
name = "parser"
harness = false