[package]
name = "emoji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.1"
phf = "0.11.1"
regex-automata = "0.1"

[build-dependencies]
phf_codegen = "0.11.1"
indexmap = "1"

[dev-dependencies]
criterion = "0.4"
regex = "1"

[[bench]]
name = "re"
harness = false