[package]
name = "emoji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = "0.11.1"
regex-automata = "0.1"

[build-dependencies]
phf_codegen = "0.11.1"
indexmap = "2"

[dev-dependencies]
criterion = "0.5"
regex = "1"

[[bench]]
name = "re"
harness = false
