[package]
name = "filesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdk = { git = "https://github.com/Lantern-chat/client-sdk-rs", features = [], package = "client-sdk" }

tokio = { version = "1", features = ["fs"] }
async-trait = "0.1.53"
aes = { version = "0.7", features = ["ctr"] }
pin-project-lite = "0.2.8"
hex = "0.4.3"
base64 = "0.13.0"
tracing = "0.1.34"
ahash = "0.7.6"
