[package]
name = "ftl"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4", features = ["full"] }
tokio-util = { version = "0.6", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }
hyper = { version = "0.14.4", features = ["http1", "http2", "server", "stream", "runtime"] }
tokio-tungstenite = "0.14.0"
http = "0.2.3"
async-compression = { version = "0.3.7", features = ["brotli", "deflate", "gzip", "tokio"] }
multipart = { version = "0.17", default-features = false, features = ["server"] }
serde_urlencoded = "0.7"
percent-encoding = "2.1"
mime = "0.3.16"
mime_guess = "2.0.3"
headers = "0.3"
url = "2.2.0"
futures = "0.3"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
thiserror = "1.0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "0.15"
bytes = "1.0.1"
pin-project = "1"
