[package]
name = "mailer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4", features = ["full", "parking_lot"] }
lettre = { version = "0.10.0-rc.3", features = ["tokio1", "builder", "smtp-transport", "tokio1-native-tls"] }
ramhorns = "0.12.0"