[package]
name = "main"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
server = { path = "../server" }

tokio = { version = "1.4", features = ["full"] }
futures = "0.3"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
tracing-futures = { version = "0.2.4", default-features = false, features = ["std-future"] }
tracing-subscriber = "0.2.15"
structopt = "0.3.21"
dotenv = "0.15.0"
anyhow = "1"