[package]
name = "main"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nightly = ["server/nightly"]
armv8 = ["nightly", "server/armv8"]
memory_metrics = ["tikv-jemallocator"]
default = ["memory_metrics"]

[dependencies]
db = { path = "../db" }
server = { path = "../server" }
util = { path = "../util" }

tokio = { version = "1", features = ["full", "parking_lot"] }
futures = "0.3"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
tracing-futures = { version = "0.2.4", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15.0"
anyhow = "1"
pico-args = "0.4.2"

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.4.1", optional = true }
