[package]
name = "md_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.7.0"
bytecount = "0.6.2"

regex_util = { path = "../regex_util" }
regex-automata = { version = "0.1.10", default-features = false }
once_cell = "1.13"

[build-dependencies]
regex_util = { path = "../regex_util", features = ["build"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parser"
harness = false
