[package]
name = "md_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex-automata-macro = { git = "https://github.com/novacrazy/regex-automata-macro" }

smallvec = "1.7.0"
bytecount = "0.6.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parser"
harness = false
