[package]
name = "mfa_totp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11"
sha2 = "0.10"
rustcrypto-argon2 = { package = "argon2", version = "0.5", default-features = false, features = ["alloc"] }
hmac = { version = "0.12", features = ["reset"] }
base32 = "0.5"
rand = "0.8"

[dev-dependencies]
hex = "0.4.3"
