[package]
name = "models"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-types = { version = "0.2.1", optional = true }
bytes = { version = "1", optional = true }
chrono = "0.4.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_shims = { version = "0.2", features = ["std", "mime", "bitflags"] }
bitflags = "1.2"
serde_repr = "0.1"
itoa = "0.4.7"
smol_str = { path = "../../deps/smol_str", features = ["serde"] }
# typescript-definitions = { git = "https://github.com/storyscript/typescript-definitions" }

[features]
tokio-pg = ["postgres-types", "bytes"]

[dev-dependencies]
