[package]
name = "models"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
timestamp = { path = "../timestamp" }

postgres-types = { version = "0.2.1", optional = true }
bytes = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_shims = { version = "0.2", features = ["std", "mime", "bitflags"] }
bitflags = "1.2"
serde_repr = "0.1"
itoa = "1"
time = { version = "0.3", features = ["macros"] }
smol_str = { path = "../../deps/smol_str", features = ["serde"] }
arrayvec = { version = "0.7.1", features = ["serde"] }
hashbrown = "0.11.2"
# typescript-definitions = { git = "https://github.com/storyscript/typescript-definitions" }

[features]
tokio-pg = ["postgres-types", "bytes"]

[dev-dependencies]
