[package]
name = "process_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
default-features = false
features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_SystemInformation"]
