[package]
name = "processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blurhash = { path = "../blurhash" }

image = { version = "0.24", default_features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp"] }
tracing = "0.1.26"
png = "0.17"
thiserror = "1.0.30"
jpeg-decoder = { version = "0.2", default_features = false }