[package]
name = "processing"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blurhash = { path = "../blurhash" }

image = { version = "0.24", default-features = false, features = ["gif", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp"] }
tracing = "0.1.26"
png = "0.17"
thiserror = "1.0.30"
jpeg-decoder = { version = "0.3", default-features = false }
jpeg-encoder = "0.5.1"
oxipng = { git = "https://github.com/shssoichiro/oxipng", default-features = false, features = ["zopfli"] }
mozjpeg = { version = "0.9.3" }
ravif = { git = "https://github.com/kornelski/cavif-rs" }
rgb = "0.8"
