[package]
name = "schema"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models", features = ["tokio-pg"] }

thorn = { git = "https://github.com/novacrazy/thorn" }
postgres-types = "0.2.1"
enum_primitive = "0.1.1"
bitflags = "1.2.1"

[dev-dependencies]
serde_json = "1.0.64"