[package]
name = "schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models", features = ["pg"] }

thorn = { git = "https://github.com/novacrazy/thorn" }

smol_str = "0.1"
serde = { version = "1", features = ["derive"] }
postgres-types = "0.2.1"
enum_primitive = "0.1.1"
bitflags = "1.2.1"
aes = "0.7"
time = "0.3"

[dev-dependencies]
serde_json = "1.0.64"