[package]
name = "server"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftl = { path = "../ftl" }
models = { path = "../models" }
db = { path = "../db" }
util = { path = "../util" }

thorn = { git = "https://github.com/novacrazy/thorn" }

serde = { version = "1", features = ["derive"] }
tokio = { version = "1.4", features = ["full", "parking_lot"] }
tokio-util = { version = "0.6", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
async-trait = "0.1.50"
async-compression = { version = "0.3.8", features = ["brotli", "deflate", "gzip", "tokio"] }
hashbrown = { version = "0.11", features = ["inline-more"] }
# lettre = { version = "0.10.0-rc.1", features = ["tokio1"] }
futures = "0.3"
hyper = { version = "0.14.4", features = ["http1", "http2", "server", "stream", "runtime"] }
http = "0.2.3"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
headers = "0.3"
base64 = "0.13.0"
hex = "0.4.2"
lazy_static = "1.4.0"
rust-argon2 = "0.8.3"
ctr = "0.7"
aes = "0.7"
# sha3 = "0.9.1"
flate2 = { version = "1.0.19", default-features = false, features = ["rust_backend"] }
miniz_oxide = "0.4.4"
thiserror = "1.0.24"
serde_repr = "0.1.6"
paste = "1.0.5"
serde_json = "1.0.64"
rmp-serde = "0.15.4"
rand = "0.8.3"
time = "0.2.26"
regex = "1.4.6"
tokio-tungstenite = "0.14.0"
ahash = "0.7.2"
either = "1.6.0"
failsafe = "1.0.0"
parking_lot = "0.11.1"
num_cpus = "1.13.0"
aho-corasick = "0.7"
xorf = "0.7.0"
arc-swap = "1.2.0"
bitflags = "1.2"

[build-dependencies]
built = { version = "0.5", features = ["git2", "chrono"] }

